# agent-shelf

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
distill/: extract.py
shelf/: chunker.py  cli.py  config.py  convert.py  digests.py  embedder.py  emit_mcp.py  indexer.py  jsonutil.py  librarian.py  masking.py  names.py  ports.py  prompts.py  routing.py  search.py  server.py  service.py  setup.py  shelver.py  shelving.py  store.py
shelf/engines/: __init__.py  agy.py  codex.py  gemini_cli.py  ollama.py  runner.py
tests/: conftest.py  fakes.py  test_boundaries.py  test_chunker.py  test_cli.py  test_config.py  test_convert.py  test_digests.py  test_embedder.py  test_emit_mcp.py  test_engines_args.py  test_fakes.py  test_indexer.py  test_jsonutil.py  test_librarian.py  test_masking.py  test_names.py  test_ports.py  test_prompts.py  test_routing.py  test_runner.py  test_search.py  test_server.py  test_service.py  test_setup.py  test_shelver.py  test_shelving.py  test_store.py
