[project]
name = "shelf"
version = "0.4.0"
description = "書籍・資料コーパスへの委譲QA（ローカル検索+サブスクCLI合成）MCPサーバ"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "fastembed>=0.4.0",
    "numpy>=1.26",
    "pymupdf4llm",
    "pymupdf",
    "markitdown[docx,xlsx,xls,pptx]",
]

[project.scripts]
shelf = "shelf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shelf"]

[tool.ruff]
line-length = 100
target-version = "py311"

# エディタ(Pyright)が shelf/.venv を解決できるようにする（実行系は uv が解決）
[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
